// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Signup /> calls the submit handler when button is clicked 1`] = `
<div>
  <div>
    <form
      data-testid="form"
    >
      <div
        class="AuthFormStyles-js87jd-0 ieHHDD"
      >
        <div>
          <div
            id="authentication-form"
          >
            <div
              id="form-body"
            >
              <h1
                id="form-header"
              >
                Reset Password
              </h1>
              <label
                for="password"
              >
                Password
              </label>
              <input
                autocomplete="current-password"
                class="auth-form-input"
                name="password"
                placeholder="Password"
                required=""
                type="password"
                value="password"
              />
              <label
                for="confirmPassword"
              >
                Confirm Password
              </label>
              <input
                autocomplete="new-password"
                class="auth-form-input"
                name="confirmPassword"
                placeholder="Confirm Password"
                required=""
                type="password"
                value="confirmPassword"
              />
              <div
                id="action-button-container"
              >
                <button
                  id="submit-button"
                  type="submit"
                >
                  Reset Password
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Signup /> renders an empty form 1`] = `
<div>
  <div>
    <form
      data-testid="form"
    >
      <div
        class="AuthFormStyles-js87jd-0 ieHHDD"
      >
        <div>
          <div
            id="authentication-form"
          >
            <div
              id="form-body"
            >
              <h1
                id="form-header"
              >
                Reset Password
              </h1>
              <label
                for="password"
              >
                Password
              </label>
              <input
                autocomplete="current-password"
                class="auth-form-input"
                name="password"
                placeholder="Password"
                required=""
                type="password"
                value=""
              />
              <label
                for="confirmPassword"
              >
                Confirm Password
              </label>
              <input
                autocomplete="new-password"
                class="auth-form-input"
                name="confirmPassword"
                placeholder="Confirm Password"
                required=""
                type="password"
                value=""
              />
              <div
                id="action-button-container"
              >
                <button
                  id="submit-button"
                  type="submit"
                >
                  Reset Password
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Signup /> renders text in the form input 1`] = `
<div>
  <div>
    <form
      data-testid="form"
    >
      <div
        class="AuthFormStyles-js87jd-0 ieHHDD"
      >
        <div>
          <div
            id="authentication-form"
          >
            <div
              id="form-body"
            >
              <h1
                id="form-header"
              >
                Reset Password
              </h1>
              <label
                for="password"
              >
                Password
              </label>
              <input
                autocomplete="current-password"
                class="auth-form-input"
                name="password"
                placeholder="Password"
                required=""
                type="password"
                value="password"
              />
              <label
                for="confirmPassword"
              >
                Confirm Password
              </label>
              <input
                autocomplete="new-password"
                class="auth-form-input"
                name="confirmPassword"
                placeholder="Confirm Password"
                required=""
                type="password"
                value="confirmPassword"
              />
              <div
                id="action-button-container"
              >
                <button
                  id="submit-button"
                  type="submit"
                >
                  Reset Password
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
